Start dss-token